--- a/packages/hardhat/example.env
+++ b/packages/hardhat/example.env
@@ -12,9 +12,9 @@
 EXAMPLE_INFURA_KEY=582dabbadbeef8...
 EXAMPLE_DEPLOYER_PRIV_KEY=deadbeef01EEdf972aBB...
 
-# Rinkeby
-RINKEBY_INFURA_KEY=
-RINKEBY_DEPLOYER_PRIV_KEY=
+# Sepholia
+SEPHOLIA_INFURA_KEY=
+SEPHOLIA_DEPLOYER_PRIV_KEY=
 
 # Kovan
 KOVAN_INFURA_KEY=
